2009-11-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/bytecomp.el (byte-compile-warning-types): New type
	`suspicious'.
	(byte-compile-warnings): Use byte-compile-warning-types.
	(byte-compile-save-excursion): Warn about use of set-buffer right
	after save-excursion.

	* progmodes/gud.el (gud-basic-call): Don't only save the buffer but
	the excursion as well.

2009-11-27  Michael Albinus  <michael.albinus@gmx.de>

	* eshell/em-unix.el (eshell/su, eshell/sudo): New defuns,
	providing a Tramp related implementation of "su" and "sudo".
	(eshell-unix-initialize): Add "su" and "sudo".

2009-11-27  Daiki Ueno  <ueno@unixuser.org>

	* net/socks.el (socks-send-command): Convert binary request to
	unibyte before sending.  This fixes mishandling of some port
	numbers such as 129.

2009-11-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* help.el (describe-bindings-internal): Remove `interactive'.

	* man.el (Man-completion-table): Trim a terminating "(".
	Remove the space between name page a section.
	Add the command's description on the `help-echo' property.
	Remove `process-connection-type' binding since it's unused by
	call-process.
	Provide completion for the "<section> <name>" format as well.
	(Man-default-man-entry): Remove spurious var shadowing the argument.

2009-11-26  Kevin Ryde  <user42@zip.com.au>

	* log-view.el: Add "Keywords: tools", since its other keywords
	aren't in finder-known-keywords, and following vc.el.

	* sha1.el (sha1-string-external): default-directory "/" in case
	otherwise non-existent.  process-connection-type pipe for touch of
	efficiency recommended by elisp manual.  (An aside in Bug#3911.)

2009-11-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	Misc coding convention cleanups.
	* htmlfontify.el (hfy-init-kludge-hook): Rename from
	hfy-init-kludge-hooks.
	(hfy-etags-cmd, hfy-flatten-style, hfy-invisible-name, hfy-face-at)
	(hfy-fontify-buffer, hfy-prepare-index-i, hfy-subtract-maps)